# murmur

./: .autonoe-note.md  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DISTRIBUTION.md  README.md  SPEC.md  TESTING_CMD.md  TESTING_DICTIONARY.md  TESTING_HARD.md  TESTING_LLM.md  TESTING_PIPELINE.md  TESTING_SETTINGS.md  TESTING_STT.md  TESTING_STT_PROVIDERS.md  TESTING_SYSTEM_TRAY.md  TESTING_TRANSLATION.md  TESTING_UI.md  knope.toml  verify_build.sh
.claude/: settings.json
.githooks/: pre-commit
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  prepare-release.yml  release.yml
config/: default.toml
crates/lt-audio/: Cargo.toml
crates/lt-audio/src/: capture.rs  error.rs  lib.rs  resampler.rs  vad.rs
crates/lt-core/: Cargo.toml
crates/lt-core/src/: config.rs  dictionary.rs  error.rs  history.rs  lib.rs  llm.rs  output.rs  stt.rs
crates/lt-llm/: Cargo.toml  build.rs
crates/lt-llm-apple/: Package.swift
crates/lt-llm-apple/Sources/LlmBridge/: LlmBridge.swift  Types.swift
crates/lt-llm-apple/Sources/LlmBridge/include/: llm_bridge.h
crates/lt-llm/src/: apple.rs  copilot.rs  executor.rs  gemini.rs  http_api.rs  lib.rs  prompt_store.rs  prompts.rs
crates/lt-llm/tests/: cli_integration.rs
crates/lt-output/: Cargo.toml
crates/lt-output/src/: clipboard.rs  combined.rs  keyboard.rs  lib.rs
crates/lt-pipeline/: Cargo.toml
crates/lt-pipeline/src/: commands.rs  lib.rs  orchestrator.rs  state.rs  text_normalization.rs
crates/lt-stt/: Cargo.toml  build.rs
crates/lt-stt-apple/: Package.swift
crates/lt-stt-apple/Sources/SpeechBridge/: SpeechBridge.swift  Types.swift
crates/lt-stt-apple/Sources/SpeechBridge/include/: speech_bridge.h
crates/lt-stt/src/: apple.rs  chunker.rs  custom.rs  elevenlabs.rs  groq.rs  lib.rs  openai.rs
crates/lt-stt/tests/: websocket_integration.rs
crates/lt-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
crates/lt-tauri/capabilities/: default.json
crates/lt-tauri/icons/: icon.icns
crates/lt-tauri/permissions/: default.toml
crates/lt-tauri/src/: diagnostics.rs  main.rs  permissions.rs  sound.rs
prompts/: change_tone.md  generate_reply.md  post_process.md  shorten.md  translate.md
scripts/: dev.sh
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.svelte  app.css  main.ts
ui/src/components/history/: HistoryPanel.svelte
ui/src/components/overlay/: FloatingOverlay.svelte  TranscriptionView.svelte  WaveformIndicator.svelte
ui/src/components/settings/: AboutSection.svelte  DiagnosticsPanel.svelte  DictionaryEditor.svelte  HotkeyConfig.svelte  LlmConfig.svelte  OutputConfig.svelte  PromptsEditor.svelte  ProviderConfig.svelte  SettingsPanel.svelte  diagnostics.test.mjs  diagnostics.ts  providerGroups.test.mjs  providerGroups.ts
ui/src/components/settings/ui/: ActionRow.svelte  PageHeader.svelte  SectionHeader.svelte  SettingsInput.svelte  StatusRow.svelte
ui/src/lib/: design-tokens.css  tauri.ts
