[workspace]
members = [
    "crates/lt-core",
    "crates/lt-audio",
    "crates/lt-stt",
    "crates/lt-llm",
    "crates/lt-output",
    "crates/lt-pipeline",
    "crates/lt-tauri",
]
resolver = "2"

[workspace.package]
license = "Apache-2.0"
repository = "https://github.com/hydai/murmur"
homepage = "https://github.com/hydai/murmur"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.0.0"
thiserror = "2.0.18"
async-trait = "0.1.89"
tracing = "0.1.44"
directories = "6.0.0"
