[package]
name = "lt-llm"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true

[dependencies]
lt-core = { path = "../lt-core" }

tokio = { version = "1.49.0", features = ["process", "io-util", "time", "sync", "macros", "rt"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
