[package]
name = "lt-stt"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true

[dependencies]
lt-core = { path = "../lt-core" }

# Async runtime
tokio = { version = "1.49.0", features = ["full"] }
async-trait.workspace = true

# WebSocket
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
futures-util = "0.3.32"
url = "2.5"

# HTTP client (for REST providers)
reqwest = { version = "0.13.2", features = ["json", "multipart"] }

# WAV encoding (used by chunker for REST providers)
hound = "3.5.1"

# Serialization
serde = { workspace = true }
serde_json.workspace = true
base64 = "0.22.1"

# Locale detection (for Apple STT "auto" mode)
sys-locale = "0.3"

# Error handling and logging
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio-test = "0.4.4"
