[package]
name = "lt-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = [] }
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-clipboard-manager = "2.3.2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.49.0", features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
lt-core = { path = "../lt-core" }
lt-audio = { path = "../lt-audio" }
lt-stt = { path = "../lt-stt" }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.3.1"
