[package]
name = "lt-tauri"
version = "0.2.14"
edition = "2021"
license.workspace = true
repository.workspace = true

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-clipboard-manager = "2.3.2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.52.3", features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
image = "0.25.10"
sys-locale = "0.3.2"
lt-core = { path = "../lt-core" }
lt-audio = { path = "../lt-audio" }
lt-stt = { path = "../lt-stt" }
lt-llm = { path = "../lt-llm" }
lt-output = { path = "../lt-output" }
lt-pipeline = { path = "../lt-pipeline" }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.3.2"
